# libliri

./: .qmake.conf  .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  features.cmake  libliri.pro  libliri.qbs  sync.profile
.github/workflows/: build.yml  checks.yml
.reuse/: dep5
.travis/: PKGBUILD.in  bintray.json.in  build.sh  deploy.sh  github_deploy_key_liri_ci.enc
scripts/: update_qmltypes.sh
src/: deployment.qbs  src.pro  tools.qbs
src/core/: CMakeLists.txt  core.pro  core.qbs  desktopfile.cpp  desktopfile.h  desktopfileaction.cpp  desktopfileaction.h  kformat.cpp  kformat.h  kformatprivate.cpp  kformatprivate_p.h  liricoreglobal.h
src/dbusservice/: CMakeLists.txt  dbusservice.cpp  dbusservice.h  dbusservice.pro  dbusservice.qbs  dbusservice_p.h  liridbusserviceglobal.h
src/imports/: imports.pro  imports.qbs
src/imports/core/: CMakeLists.txt  core.pro  core.qbs  formatter.cpp  formatter.h  plugin.cpp  plugins.qmltypes  qmldir  qobjectlistmodel.h  qquicklist.h
src/imports/dbusservice/: CMakeLists.txt  application.cpp  application.h  plugin.cpp  qmldir
src/imports/device/: CMakeLists.txt  device.qbs  plugin.cpp  plugins.qmltypes  qmldir
src/imports/notifications/: CMakeLists.txt  notifications.cpp  notifications.h  notifications.pro  notifications.qbs  notificationsdaemon.cpp  notificationsdaemon.h  notificationsimage.cpp  notificationsimage.h  notificationsimageprovider.cpp  notificationsimageprovider.h  plugin.cpp  plugins.qmltypes  qmldir
src/localdevice/: CMakeLists.txt  lirilocaldeviceglobal.h  localdevice.cpp  localdevice.h  localdevice.qbs  localdevice_p.h  localdevicebackend_p.cpp  localdevicebackend_p_p.h  localdevicepowerbackend_p.cpp  localdevicepowerbackend_p_p.h  localdevicesystembackend_p.cpp  localdevicesystembackend_p_p.h  osrelease.cpp  osrelease.h  osrelease_p.h
src/localdevice/backends/: systemdbackend.cpp  systemdbackend_p.h  systemdpowerbackend.cpp  systemdpowerbackend_p.h  systemdsystembackend.cpp  systemdsystembackend_p.h  upowerbackend.cpp  upowerbackend_p.h  upowerpowerbackend.cpp  upowerpowerbackend_p.h
src/logind/: CMakeLists.txt  defaultlogind_p_p.h  logind.cpp  logind.h  logind.qbs  logind_p.h  logindtypes.cpp  logindtypes_p.h
src/models/: CMakeLists.txt  lirimodelsglobal.h  mergeproxymodel.cpp  mergeproxymodel.h  mergeproxymodel_p.h  models.qbs  qobjectlistmodel.cpp  qobjectlistmodel.h  qquicklist.h
src/notifications/: CMakeLists.txt  lirinotificationsglobal.h  notification.cpp  notification.h  notification_p.h  notifications.pro  notifications.qbs
src/notify/: CMakeLists.txt  main.cpp  notify.pro  notify.qbs
src/xdg/: CMakeLists.txt  Liri1XdgDependencies.cmake.in  autostart.cpp  autostart.h  desktopfile.cpp  desktopfile.h  desktopfile_p.h  desktopfileutils.cpp  desktopfileutils_p.h  desktopmenu.cpp  desktopmenu.h  desktopmenu_p.h  logging.cpp  logging_p.h  xdg.qbs  xdgdirs_p.cpp  xdgdirs_p_p.h  xdgmenuapplinkprocessor_p.cpp  xdgmenuapplinkprocessor_p_p.h  xdgmenulayoutprocessor_p.cpp  xdgmenulayoutprocessor_p_p.h  xdgmenureader_p.cpp  xdgmenureader_p_p.h  xdgmenurules_p.cpp  xdgmenurules_p_p.h  xmlhelper_p.cpp  xmlhelper_p_p.h
tests/auto/: auto.qbs
tests/auto/cmake/: CMakeLists.txt  cmake.pro
tests/auto/core/: CMakeLists.txt  core.pro  core.qbs  tst_qobjectlistmodel.cpp
tests/auto/logind/: CMakeLists.txt  fakelogind.cpp  fakelogind.h  logind.qbs  tst_logind.cpp
tests/auto/xdg/: CMakeLists.txt  tst_desktopfile.cpp
